fix: add horizontal alignment center

--- a/style.scss
+++ b/style.scss
@@ -62,3 +62,14 @@ h5, a {font-size: 20px;}
 p {font-size: 18px;}
 .small {font-size: 16px;}
 .large {font-size: 30px;}
+
+main {
+  max-width: 1920px;
+  margin: 0 auto;
+}
+
+.header__wrap,
+.footer__wrap {
+  max-width: 1920px;
+  margin: 0 auto;
+}
